# SPCI-Reconstruction

./: .gitignore  CMakeLists.txt  README.md
macros/: CreateSource.cpp  MLEM.cpp  RebinningMacro.cpp  RebinningSpectra.cpp  mlem.cpp
macros/Algorithm/: MLEM_macro.c  MLEM_macro_c.d  MLEM_macro_c_ACLiC_dict_rdict.pcm  OE_macro.c  OE_macro_c.d  OE_macro_c_ACLiC_dict_rdict.pcm  imagespace.h  measurements.h  mlem.h  originensemble.h  state.h  systemmatrix.h  utilities.h
macros/BaseMapGrid/: BaseMapGrid.cpp
macros/ChooseVoxelsInSM/: ChooseVoxelsInSM.c
macros/CoincidentPairs/: CoincidentPairs.cpp
macros/CombineMeasurements/: CombineMeasurements.cpp
macros/ComptonContinuum/: ComptonContinuum.cpp
macros/CreateBaseFile/: CreateBaseFile.cpp
macros/CreateSource/: CreateSource.cpp  Sources.txt
macros/CreateSystemMatrix/: CreateSystemMatrix.cpp
macros/DeleteVoxels/: DeleteVoxels.c
macros/DetectorSize/: DetectorSize.cpp
macros/GetRidOfRedundantSpectra/: GetRidOfRedundantSpectra.cpp
macros/Intricacy/: Intricacy.c
macros/MLEM/: MLEM.cpp  MLEM_Old_Modified.cpp  MLEM_Old_Standard.cpp  MLEM_cpp.d  MLEM_cpp_ACLiC_dict_rdict.pcm
macros/Map/: Map.cpp
macros/OldMLEM/: ImageReconstruction.h  main_image.cpp  main_image_cpp.d  main_image_cpp_ACLiC_dict_rdict.pcm
macros/OriginEnsemble/: OE.cpp  OE_cpp.d  OE_cpp_ACLiC_dict_rdict.pcm
macros/PlotDC/: PlotDC.c
macros/PlotDCB/: PlotDCB.c
macros/RebinningSpectra/: RebinningSpectra.cpp
src/: image_processing.cpp  image_processing.h  imagespace.cpp  imagespace.h  main.cpp  measurements.cpp  measurements.h  mlem.cpp  mlem.h  navigation.cpp  navigation.h  oe.cpp  oe.h  state.cpp  state.h  systemmatrix.cpp  systemmatrix.h  user_prompts.h  utilities.cpp  utilities.h
test/: MLEM_reco.cpp
